# os-workshop

./: .gitignore
KP/doc/: report.docx
KP/src/: benchmark  benchmark.cpp  uf  usage_factor.cpp
lab-2/: main.c
lab1/: Makefile  out.txt  report.docx
lab1/src/: child.c  parent.c
lab2/: main  report.docx
lab2/src/: main.c  run.sh
lab3/doc/: report.docx
lab3/src/: child1  child2  child2.cpp  parent  parent.cpp
lab4/doc/: report.docx
lab4/src/: Makefile  SinIntegral_Rect.cpp  SinIntegral_Trapezoid.cpp  Sort_Bubble.cpp  Sort_Quick.cpp  TestProgram1.cpp  TestProgram2.cpp
lab5-7/: CMakeLists.txt
lab5-7/doc/: report.docx
lab5-7/src/: Makefile  client.cpp  control.cpp  main.cpp  nodes.cpp  timer.cpp  timer.h  tree.cpp  tree.h  zmq_operations.cpp
lab8/: report.docx
